--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+          "@jsr/supabase__supabase-js": "^2.49.8",
           "@radix-ui/react-accordion": "^1.2.3",
           "@radix-ui/react-alert-dialog": "^1.1.6",
           "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -35,12 +36,10 @@
           "clsx": "*",
           "cmdk": "^1.1.1",
           "embla-carousel-react": "^8.6.0",
+          "hono": "*",
           "input-otp": "^1.4.2",
-          "jsr:": "^supabase",
           "lucide-react": "^0.487.0",
           "next-themes": "^0.4.6",
-          "npm:": "^supabase",
-          "npm:hono": "*",
           "react": "^18.3.1",
           "react-day-picker": "^8.10.1",
           "react-dom": "^18.3.1",
@@ -54,7 +53,7 @@
       "devDependencies": {
           "@types/node": "^20.10.0",
           "@vitejs/plugin-react-swc": "^3.10.2",
-          "vite": "^5.4.19"
+          "vite": "6.3.5"
       },
       "scripts": {
           "dev": "vite",
